# sel4RustApp

./: CMakeLists.txt  LICENSE_BSD2.txt  README.org
apps/root_app/: CMakeLists.txt
apps/root_app/src/: main.c
apps/rust_app/: CMakeLists.txt  Cargo.toml
apps/rust_app/.cargo/: config
apps/rust_app/src/: lib.rs
