#
# Copyright 2019, DornerWorks
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DORNERWORKS_BSD)
#

[package]
name = "rust_app"
version = "0.1.0"
authors = ["Jesse Millwood <jesse.millwood@dornerworks.com>"]
edition = "2018"

[lib]
crate-type=['staticlib']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
